mon: avoid segfault in wait_auth_rotating

MonClient users should not be calling into MonClient
after calling shutdown().  However, MonClient should
assert out rather than proceeding to try and
follow a maybe-null pointer.

Related to http://tracker.ceph.com/issues/19566

Signed-off-by: John Spray <john.spray@redhat.com>